--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.29.0
-pandas==2.1.4
-psycopg2-binary==2.9.9
-matplotlib==3.8.2
-matplotlib-venn==0.11.10
-plotly==5.18.0
+streamlit
+pandas
+psycopg2-binary
+matplotlib
+matplotlib-venn
+plotly
