--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,6 @@
 [postgres]
-host = "120.0.0.157"
-database = "bi_redebiz"
-user = "bi"
-password = "B1@Redebiz2020"
+host = "ep-jolly-water-ac9fpi2t-pooler.sa-east-1.aws.neon.tech"
+database = "neondb"
+user = "neondb_owner"
+password = "npg_lKPCUru3n4wg"
 port = "5432"
